# deik-kepfeldolgozas

./: .gitignore  CMakeLists.txt
lib/: histo.cpp  histo.hpp
week1/: img_loading.cpp
week2/: montage.cpp  pixel_manipulation.cpp
week3/: padlolapok.cpp
week4/: histogram.cpp
week5/: kuszoboles.cpp  sas.avi
week7/: konturkezeles.cpp  savkizaras.cpp
zh/: feladat1.cpp  feladat2.cpp  feladat3.cpp  feladat4.cpp
